force-app/main/default/objects/Avion__c/fields/Aeronave__c.field-meta.xml
<CustomField>
    <fullName>Aeronave__c</fullName>
    <description>Tipo de avión que viajara, si es comercial o de carga</description>
    <label>Aeronave</label>
    <length>50</length>
    <type>Text</type>
</CustomField>