force-app/main/default/objects/Avion__c/fields/Capacidad_de_Carga__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_de_Carga__c</fullName>
    <description>la capacidad de carga que tiene el avion</description>
    <label>Capacidad de Carga</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>