force-app/main/default/objects/Avion__c/fields/N_mero_de_pasajeros_clase_Turista__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_pasajeros_clase_Turista__c</fullName>
    <description>es el Numero de pasajeros que viaja en clase turista</description>
    <label>Número de pasajeros clase Turista</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>