force-app/main/default/objects/Avion__c/fields/Solo_carga__c.field-meta.xml
<CustomField>
    <fullName>Solo_carga__c</fullName>
    <defaultValue>false</defaultValue>
    <description>solicita saber si solo lleva carga en el vuelo</description>
    <label>¿Solo carga?</label>
    <type>Checkbox</type>
</CustomField>