force-app/main/default/objects/Avion__c/fields/Solo_Viajes_Internacionales__c.field-meta.xml
<CustomField>
    <fullName>Solo_Viajes_Internacionales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>requiere saber si es para viajes internacionales</description>
    <label>¿Solo Viajes Internacionales?.</label>
    <type>Checkbox</type>
</CustomField>