force-app/main/default/objects/Avion__c/fields/Solo_Viajes_Nacionales__c.field-meta.xml
<CustomField>
    <fullName>Solo_Viajes_Nacionales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>requiere saber si el viaje que realiza es nacional</description>
    <label>¿Solo Viajes Nacionales?.</label>
    <type>Checkbox</type>
</CustomField>