force-app/main/default/objects/Avion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Aeronave__c</columns>
    <columns>Activo__c</columns>
    <columns>Solo_carga__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>