force-app/main/default/objects/Avion__c/listViews/Solo_carga.listView-meta.xml
<ListView>
    <fullName>Solo_carga</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Solo_carga__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Solo carga</label>
</ListView>